# PH13FEI_ws_perception_husky_ws

src/object_detection_2d/: CMakeLists.txt  package.xml  setup.py
src/object_detection_2d/msg/: BoundingBox2D.msg  BoundingBoxes.msg
src/object_detection_2d/src/: handler.py  main.py  network.py
src/object_detection_2d/src/centernet/: DLAnet.py  dataset.py  predict.py  train.py  utils.py
src/object_detection_depth/: CMakeLists.txt  package.xml  setup.py
src/object_detection_depth/msg/: CustomPosewithCovarianceStamped.msg
src/object_detection_depth/src/: main.py  process_handler.py  retrieve_depth.py  transforms.py
